# relaydot

./: .dockerignore  .gitignore  README.md  package.json  pnpm-lock.yaml  redocly.yaml
.github/workflows/: ci.yml  controller-image.yml  deploy-controller.yml  release.yml
agent/: README.md  pyproject.toml
agent/src/relaydot/: __init__.py  apply.py  bundle.py  cli.py  controller.py  errors.py  manifest.py  merge.py  paths.py  policy.py  secrets.py  service.py  streams.py  usage.py
agent/src/relaydot/data/: recommended.yaml
agent/tests/: conftest.py  smoke_package.py  test_apply.py  test_bundle.py  test_cli.py  test_controller.py  test_manifest.py  test_merge.py  test_paths.py  test_policy.py  test_service.py  test_streams.py  test_usage.py
apps/api/: package.json
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/src/: instrumentation.ts
apps/web/src/app/: enrollment-panel.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.test.ts  api.ts  context.ts  migrations.ts  routes.ts  security.test.ts  security.ts  store.test.ts  store.ts  test-helpers.ts  (+3 more)
config/: catalog-sources.yaml
contracts/: openapi.yaml
docs/: architecture.md  deployment-workflow.md  implementation-plan.md  model-price-catalog.md  releasing.md  research.md  self-hosting.md  syncthing-migration.md  usage-analytics.md
infra/compose/: .env.example  compose.build.yaml  compose.yaml
infra/scripts/: backup-controller.sh  deploy-controller.sh  lib.sh  restore-controller.sh
infra/tests/: deployment-scripts.sh
tools/: check-docs.mjs
(+8 files in other folders)
