[project]
name = "relaydot"
version = "0.1.0"
description = "Safe endpoint synchronization primitives for Relaydot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "PyYAML>=6.0.2",
  "typer>=0.16.0",
]

[project.scripts]
relaydot = "relaydot.cli:app"

[dependency-groups]
dev = [
  "hypothesis>=6.135",
  "mypy>=1.16",
  "pytest>=8.4",
  "pytest-cov>=6.2",
  "ruff>=0.12",
  "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relaydot"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.coverage",
  "/.hypothesis",
  "/.mypy_cache",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.venv",
  "/dist",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["relaydot"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["relaydot"]
